--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 /* top banner styles */
 .top-banner{
     width: 100%;
-    height: 677px;
+    height: 524px;
     background-color: #2D25A0;
 }
 .banner-container{
@@ -223,5 +223,67 @@ body{
     .footer-container .footer-logo img{
         width: 250px;
         height: 60px;
+    }
+}
+/* media query for tablet devices */
+@media only screen and (min-width:689px) and (max-width:992px){
+    .top-banner{
+        height: 695px;
+    }
+    .banner-container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .banner-title{
+        font-size: 50px;
+    }
+    .banner-container .banner-image img{
+        width: 400px;
+        height: 320px;
+    }
+    .top-players{
+        margin-bottom: 70px;
+    }
+    .players{
+        width: 100%;
+        margin-top: 55px;
+        grid-template-columns: repeat(2, 2fr);
+        justify-items: center;
+        grid-gap: 20px;
+    }
+    .copa-champ{
+        margin-bottom: 70px;
+    }
+    .champ-container{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .champ-container .champ-image img{
+        width: 590px;
+        height: 400px;
+    }
+    .champ-title{
+        font-size: 40px;
+    }
+    .ballon-dor{
+        margin-bottom: 0px;
+    }
+    .ballon-container{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .ballon-container .winner-image img{
+        width: 590px;
+        height: 400px;
+        margin-top: 5px;
+    }
+    .winner-title{
+        font-size: 40px;
+    }
+    .footer-container .footer-logo img{
+        width: 350px;
+        height: 100px;
     }
 }
